syntax = "proto3";

package task.v1;

option go_package = "task-tracker/gen/task;taskpb";

enum TaskStatus {
  TASK_STATUS_CREATED = 0;
  TASK_STATUS_AT_WORK = 1;
  TASK_STATUS_COMPLETED = 2;
  TASK_STATUS_EXPIRED = 3;
}

message Task {
  int64 id = 1;
  int64 user_id = 2;
  string description = 3;
  TaskStatus status = 4;
  int64 created_at = 5;
  int64 due_date = 6;
}

message GetTaskRequest {
  string jwt = 1;
  int64 id = 2;
}

message GetTasksRequest {
  string jwt = 1;
}

message CreateTaskRequest {
  string jwt = 1;
  string description = 2;
  int64 due_date = 3;
}

message UpdateTaskStatusRequest {
  string jwt = 1;
  int64 id = 2;
  TaskStatus status = 3;
}

message TaskResponse {
  Task task = 1;
}

message TasksResponse {
  repeated Task tasks = 1;
}

service TaskService {
  rpc GetTask(GetTaskRequest) returns (TaskResponse);
  rpc GetTodayTasks(GetTasksRequest) returns (TasksResponse);
  rpc CreateTask(CreateTaskRequest) returns (TaskResponse);
  rpc UpdateTaskStatus(UpdateTaskStatusRequest) returns (TaskResponse);
}
